[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Vitaliy Shvedov <scwedov@yandex.ru>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
selenium = "^4.5.0"
webdriver-manager = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
